Update conclude_game method message Add handle_special_input method to main game

--- a/output/save_game.yml
+++ b/output/save_game.yml
@@ -9894,6 +9894,6 @@
 - mediawiki
 - configurations
 - poison
-:@secret_word: intelligence
-:@display_word: ____________
+:@secret_word: patrick
+:@display_word: __tri__
 :@guess_count: 0
